tigergraph-server/3.9/installation/hw-and-sw-requirements.md
![TigerGraph Logo](https://www.tigergraph.com/wp-content/uploads/2020/05/TG_LOGO.svg) [Docs](https://docs.tigergraph.com/home)
Page 1[Prev](https://docs.tigergraph.com/tigergraph-server/3.9/installation/hw-and-sw-requirements)[Next](https://docs.tigergraph.com/tigergraph-server/3.9/installation/hw-and-sw-requirements)
Search by [Algolia](https://www.algolia.com/docsearch)
[Products](https://docs.tigergraph.com/tigergraph-server/3.9/installation/hw-and-sw-requirements)
TigerGraph Savanna
[TigerGraph Savanna](https://docs.tigergraph.com/savanna/main/overview/) [(_TigerGraph Cloud Classic_)](https://docs.tigergraph.com/cloud/main/start/overview)
TigerGraph Server
[TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
TigerGraph Suite
[GraphStudio and Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/) [Insights](https://docs.tigergraph.com/insights/4.2/intro/) [GSQL Web Shell](https://docs.tigergraph.com/tigergraph-server/current/gsql-shell/web)
Query Languages
[GSQL Language Reference](https://docs.tigergraph.com/gsql-ref/4.2/intro/) [GSQL Web Shell](https://docs.tigergraph.com/tigergraph-server/current/gsql-shell/web) [OpenCypher](https://docs.tigergraph.com/gsql-ref/current/opencypher-in-gsql)
AI & Graph Intelligence
[Graph Data Science Library](https://docs.tigergraph.com/graph-ml/3.10/intro/) [Hybrid Graph+Vector Search](https://docs.tigergraph.com/gsql-ref/current/vector/)
Connectors and APIs
[Data Connectors](https://docs.tigergraph.com/tigergraph-server/current/data-loading) [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/) [TigerGraph GraphQL Service](https://docs.tigergraph.com/graphql/3.9/) [JDBC Driver](https://github.com/tigergraph/ecosys/tree/master/tools/etl/tg-jdbc-driver)
Legacy Documentation
[ Legacy Documentation ](https://docs-legacy.tigergraph.com)
[Resources](https://docs.tigergraph.com/tigergraph-server/3.9/installation/hw-and-sw-requirements)
[Developer Site](https://dev.tigergraph.com/) [Community Forum](https://community.tigergraph.com/) [Knowledge Base](https://tigergraph.freshdesk.com/support/solutions)
[Download](https://dl.tigergraph.com)
[ TG Savanna](https://savanna.tgcloud.io)
### [TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/3.9/intro/)
  *     * [Release Notes](https://docs.tigergraph.com/tigergraph-server/3.9/release-notes/)
  *     * [Overview](https://docs.tigergraph.com/tigergraph-server/3.9/intro/)
    * [Get Started](https://docs.tigergraph.com/tigergraph-server/3.9/getting-started/)
      * Installation
        * [On Docker](https://docs.tigergraph.com/tigergraph-server/3.9/getting-started/docker)
        * [On Cloud Marketplace](https://docs.tigergraph.com/tigergraph-server/3.9/getting-started/cloud-images/)
          * [AWS](https://docs.tigergraph.com/tigergraph-server/3.9/getting-started/cloud-images/aws)
          * [Azure](https://docs.tigergraph.com/tigergraph-server/3.9/getting-started/cloud-images/azure)
          * [GCP](https://docs.tigergraph.com/tigergraph-server/3.9/getting-started/cloud-images/gcp)
        * [On Linux](https://docs.tigergraph.com/tigergraph-server/3.9/getting-started/linux)
          * [System Requirements](https://docs.tigergraph.com/tigergraph-server/3.9/installation/hw-and-sw-requirements)
          * [Linux On Bare Metal](https://docs.tigergraph.com/tigergraph-server/3.9/installation/bare-metal-install)
          * [Post Install Checks](https://docs.tigergraph.com/tigergraph-server/3.9/installation/post-install-check)
        * [Advanced License Issues](https://docs.tigergraph.com/tigergraph-server/3.9/installation/license)
        * [Changing Ports](https://docs.tigergraph.com/tigergraph-server/3.9/installation/change-port)
        * [Upgrade](https://docs.tigergraph.com/tigergraph-server/3.9/installation/upgrade)
        * [Uninstallation](https://docs.tigergraph.com/tigergraph-server/3.9/installation/uninstallation)
      * [The GSQL Shell](https://docs.tigergraph.com/tigergraph-server/3.9/gsql-shell/)
        * [GSQL Shell Sessions](https://docs.tigergraph.com/tigergraph-server/3.9/gsql-shell/gsql-sessions)
        * [Using a Remote GSQL Client](https://docs.tigergraph.com/tigergraph-server/3.9/gsql-shell/using-a-remote-gsql-client)
        * [GSQL Shell (Web)](https://docs.tigergraph.com/tigergraph-server/3.9/gsql-shell/web)
    * [Create Database](https://docs.tigergraph.com/tigergraph-server/3.9/getting-started/database-definition)
      * [MultiGraph Overview](https://docs.tigergraph.com/tigergraph-server/3.9/intro/multigraph-overview)
  *     * [Load Data](https://docs.tigergraph.com/tigergraph-server/3.9/data-loading/)
      * [Overview](https://docs.tigergraph.com/tigergraph-server/3.9/data-loading/data-loading-overview)
      * [Load from Local Files](https://docs.tigergraph.com/tigergraph-server/3.9/data-loading/load-local-files)
      * [Load from Cloud Storage](https://docs.tigergraph.com/tigergraph-server/3.9/data-loading/load-from-cloud)
      * [Load from Data Warehouse](https://docs.tigergraph.com/tigergraph-server/3.9/data-loading/load-from-warehouse)
      * [Load from External Kafka](https://docs.tigergraph.com/tigergraph-server/3.9/data-loading/load-from-kafka)
      * [Load DataFrames from Spark](https://docs.tigergraph.com/tigergraph-server/3.9/data-loading/spark-connection-via-jdbc-driver)
      * [Manage Data Sources](https://docs.tigergraph.com/tigergraph-server/3.9/data-loading/manage-data-source)
      * [Stream from External Kafka (Deprecated)](https://docs.tigergraph.com/tigergraph-server/3.9/data-loading/data-streaming-connector/kafka)
  *     * Advanced Topics
      * [System Management](https://docs.tigergraph.com/tigergraph-server/3.9/system-management/management-with-gadmin)
        * [Memory management](https://docs.tigergraph.com/tigergraph-server/3.9/system-management/memory-management)
        * [Manage TigerGraph services](https://docs.tigergraph.com/tigergraph-server/3.9/system-management/manage-services)
        * [Workload Management](https://docs.tigergraph.com/tigergraph-server/3.9/system-management/workload-management)
        * [Metrics Reporting](https://docs.tigergraph.com/tigergraph-server/3.9/system-management/system-metrics)
        * [Command Glossary](https://docs.tigergraph.com/tigergraph-server/3.9/system-management/management-commands)
      * [Access Management](https://docs.tigergraph.com/tigergraph-server/3.9/user-access/)
        * Authentication
          * [Enabling User Authentication](https://docs.tigergraph.com/tigergraph-server/3.9/user-access/enabling-user-authentication)
          * [User Credentials](https://docs.tigergraph.com/tigergraph-server/3.9/user-access/user-credentials)
          * [Single Sign-On](https://docs.tigergraph.com/tigergraph-server/3.9/user-access/sso)
          * [Lightweight Directory Access Protocol (LDAP)](https://docs.tigergraph.com/tigergraph-server/3.9/user-access/ldap)
        * Authorization
          * [User Management](https://docs.tigergraph.com/tigergraph-server/3.9/user-access/user-management)
          * [Role Management](https://docs.tigergraph.com/tigergraph-server/3.9/user-access/role-management)
          * [Access Control Model](https://docs.tigergraph.com/tigergraph-server/3.9/user-access/access-control-model)
          * [Access Control Lists (ACLs)](https://docs.tigergraph.com/tigergraph-server/3.9/user-access/acl-management)
          * [Vertex-Level Access Control (Deprecated)](https://docs.tigergraph.com/tigergraph-server/3.9/user-access/vlac)
      * [Backup and Restore](https://docs.tigergraph.com/tigergraph-server/3.9/backup-and-restore/)
        * [Backup and Restore Configurations](https://docs.tigergraph.com/tigergraph-server/3.9/backup-and-restore/configurations)
        * [Back up a Database Cluster](https://docs.tigergraph.com/tigergraph-server/3.9/backup-and-restore/backup-cluster)
        * [Restore a Database Backup from the Same Cluster](https://docs.tigergraph.com/tigergraph-server/3.9/backup-and-restore/restore-backup-same)
        * [Restore a Database Backup from Another Cluster](https://docs.tigergraph.com/tigergraph-server/3.9/backup-and-restore/cross-cluster-backup)
        * [Database Import/Export](https://docs.tigergraph.com/tigergraph-server/3.9/backup-and-restore/database-import-export)
        * [Legacy Backup and Restore](https://docs.tigergraph.com/tigergraph-server/3.9/backup-and-restore/gbar-legacy)
      * Cluster and HA Management
        * Cluster Resizing
          * [Cluster Expansion](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/expand-a-cluster)
          * [Cluster Shrinking](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/shrink-a-cluster)
          * [Cluster Repartition](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/repartition-a-cluster)
          * [Cluster Replace](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/how_to-replace-a-node-in-a-cluster)
        * [Cross-Region Replication (CRR)](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/crr-index)
          * [Set up CRR](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/set-up-crr)
          * [Fail over to the DR cluster](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/fail-over)
          * [Troubleshooting CRR](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/troubleshooting)
          * [CRR FAQ](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/crr-faq)
        * [High Availability (HA)](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/ha-overview)
          * [Cluster Configuration](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/ha-cluster)
          * [GSQL Server Support](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/ha-for-gsql-server)
          * [Application Server Support](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/ha-for-application-server)
          * [Cluster Commands](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/cluster-commands)
          * [Removal of Failed Nodes](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/remove-failed-node)
      * [Architecture](https://docs.tigergraph.com/tigergraph-server/3.9/intro/internal-architecture)
        * [MultiGraph Overview](https://docs.tigergraph.com/tigergraph-server/3.9/intro/multigraph-overview)
        * [Transaction Processing and ACID Support](https://docs.tigergraph.com/tigergraph-server/3.9/intro/transaction-and-acid)
        * [Continuous Availability Overview](https://docs.tigergraph.com/tigergraph-server/3.9/intro/continuous-availability-overview)
      * [Kubernetes (Preview)](https://docs.tigergraph.com/tigergraph-server/3.9/kubernetes/)
        * [Kubernetes Operator (Preview)](https://docs.tigergraph.com/tigergraph-server/3.9/kubernetes/k8s-operator/)
  *     * [Security](https://docs.tigergraph.com/tigergraph-server/3.9/security/)
      * [Auditing Privileged User Actions](https://docs.tigergraph.com/tigergraph-server/3.9/security/audit-privileged-actions)
      * [Encrypting Connections](https://docs.tigergraph.com/tigergraph-server/3.9/security/encrypting-connections)
      * [Encrypting Data At Rest](https://docs.tigergraph.com/tigergraph-server/3.9/security/encrypting-data-at-rest)
      * [File Output Policy](https://docs.tigergraph.com/tigergraph-server/3.9/security/file-output-policy)
      * [Configuring Login Protection](https://docs.tigergraph.com/tigergraph-server/3.9/security/login-protection)
  *     * [REST API Reference](https://docs.tigergraph.com/tigergraph-server/3.9/API/)
      * [Authentication](https://docs.tigergraph.com/tigergraph-server/3.9/API/authentication)
      * [Built-in Endpoints](https://docs.tigergraph.com/tigergraph-server/3.9/API/built-in-endpoints)
      * [Built-in Endpoints JSON Catalog](https://docs.tigergraph.com/tigergraph-server/3.9/API/json-catalog)
      * [Upsert data to graph](https://docs.tigergraph.com/tigergraph-server/3.9/API/upsert-rest)
  *     * Additional Resources
      * Troubleshooting and FAQs
        * [Knowledge base and FAQs](https://kb.tigergraph.com/)
        * [System Administration FAQs](https://docs.tigergraph.com/tigergraph-server/3.9/troubleshooting/system-administration-faqs)
        * [Log Files](https://docs.tigergraph.com/tigergraph-server/3.9/troubleshooting/log-files)
          * [Gathering Log Information with gcollect](https://docs.tigergraph.com/tigergraph-server/3.9/troubleshooting/gcollect)
          * [Audit Logs](https://docs.tigergraph.com/tigergraph-server/3.9/troubleshooting/audit-logs)
          * [Set up Log Viewing with Elasticsearch, Kibana and Filebeat](https://docs.tigergraph.com/tigergraph-server/3.9/troubleshooting/elk-filebeat)
        * [Troubleshooting Guide](https://docs.tigergraph.com/tigergraph-server/3.9/troubleshooting/troubleshooting-guide)
      * References
        * [Configuration Parameters](https://docs.tigergraph.com/tigergraph-server/3.9/reference/configuration-parameters)
        * [Return codes](https://docs.tigergraph.com/tigergraph-server/3.9/reference/return-codes)
        * [List of Privileges](https://docs.tigergraph.com/tigergraph-server/3.9/reference/list-of-privileges)
        * [List of Ports](https://docs.tigergraph.com/tigergraph-server/3.9/reference/ports)
        * [Glossary](https://docs.tigergraph.com/tigergraph-server/3.9/reference/glossary)
        * [Patents and Third Party Software](https://docs.tigergraph.com/tigergraph-server/3.9/reference/patents-and-third-party-software)
        * [Legacy Version Documentation](https://docs.tigergraph.com/tigergraph-server/3.9/additional-resources/legacy-tg-versions)
        * [Comparing TigerGraph Editions](https://docs.tigergraph.com/tigergraph-server/3.9/intro/comparison-of-editions)
        * [Release and Patch Process](https://docs.tigergraph.com/tigergraph-server/3.9/intro/release-process)


TigerGraph DB 3.9
[Fully-Managed: Savanna](https://docs.tigergraph.com/savanna/main/overview/)
[Self-Managed: TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
[Install](https://docs.tigergraph.com/tigergraph-server/current/getting-started/) [Manage](https://docs.tigergraph.com/tigergraph-server/current/system-management/)
Tutorials & Guides
[GSQL](https://github.com/tigergraph/ecosys/blob/master/tutorials/GSQL.md) [OpenCypher in GSQL](https://github.com/tigergraph/ecosys/blob/master/tutorials/Cypher.md) [Hybrid Vector Search](https://github.com/tigergraph/ecosys/blob/master/tutorials/VectorSearch.md)
Reference Manuals
[GSQL](https://docs.tigergraph.com/gsql-ref/4.2/intro/) [OpenCypher](https://docs.tigergraph.com/gsql-ref/current/opencypher-in-gsql/) [Vector](https://docs.tigergraph.com/gsql-ref/current/vector/) [REST APIs](https://docs.tigergraph.com/tigergraph-server/current/api/) [Configuration Parameters](https://docs.tigergraph.com/tigergraph-server/current/reference/configuration-parameters)
Visual Tools
[Develop: GraphStudio](https://docs.tigergraph.com/gui/4.2/intro/) [Administer: Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/) [Visualize: Insights](https://docs.tigergraph.com/insights/4.2/intro/)
AI & Data Science
[Graph Algorithms](https://docs.tigergraph.com/graph-ml/3.10/intro/) [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/) [TigerGraphX](https://github.com/tigergraph/ecosys/blob/master/tutorials/TigerGraphX.md) [ML Workbench](https://docs.tigergraph.com/ml-workbench/1.4/intro/) [CoPilot](https://docs.tigergraph.com/tg-copilot/intro/)
  * [TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/tigergraph-server/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/tigergraph-server/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/tigergraph-server/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/tigergraph-server/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/tigergraph-server/3.6/intro/)
  * [GSQL Language Reference](https://docs.tigergraph.com/gsql-ref/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/gsql-ref/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/gsql-ref/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/gsql-ref/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/gsql-ref/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/gsql-ref/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/gsql-ref/3.6/intro/intro)
  * [TigerGraph Savanna](https://docs.tigergraph.com/savanna/main/overview/)
  * [GraphStudio and Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/gui/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/gui/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/gui/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/gui/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/gui/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/gui/3.6/graphstudio/overview)
  * [Insights](https://docs.tigergraph.com/insights/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/insights/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/insights/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/insights/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/insights/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/insights/3.9/intro/)
  * [Graph Data Science Library](https://docs.tigergraph.com/graph-ml/3.10/intro/)
    * [3.10](https://docs.tigergraph.com/graph-ml/3.10/intro/)
  * [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/)
    * [1.8](https://docs.tigergraph.com/pytigergraph/1.8/intro/)
    * [1.7](https://docs.tigergraph.com/pytigergraph/1.7/intro/)
    * [1.6](https://docs.tigergraph.com/pytigergraph/1.6/intro/)
  * [TigerGraph ML Workbench](https://docs.tigergraph.com/ml-workbench/1.4/intro/)
    * [1.4](https://docs.tigergraph.com/ml-workbench/1.4/intro/)
  * [TigerGraph GraphQL Service](https://docs.tigergraph.com/graphql/3.9/)
    * [3.9](https://docs.tigergraph.com/graphql/3.9/)
  * [TigerGraph CoPilot](https://docs.tigergraph.com/tg-copilot/intro/)
    * [main](https://docs.tigergraph.com/tg-copilot/intro/)
  * [TigerGraph Cloud Classic](https://docs.tigergraph.com/cloud/main/start/overview)


[](https://docs.tigergraph.com/home/)
  * [TigerGraph DB 3.9](https://docs.tigergraph.com/tigergraph-server/3.9/intro/)
  * [Get Started](https://docs.tigergraph.com/tigergraph-server/3.9/getting-started/)
  * Installation
  * [On Linux](https://docs.tigergraph.com/tigergraph-server/3.9/getting-started/linux)
  * [System Requirements](https://docs.tigergraph.com/tigergraph-server/3.9/installation/hw-and-sw-requirements)


[Edit this Page](https://github.com/tigergraph/server-docs/edit/3.9/modules/installation/pages/hw-and-sw-requirements.adoc)
### Contents
  * [Hardware Requirements](https://docs.tigergraph.com/tigergraph-server/3.9/installation/hw-and-sw-requirements#_hardware_requirements)
  * [Certified Operating Systems](https://docs.tigergraph.com/tigergraph-server/3.9/installation/hw-and-sw-requirements#_certified_operating_systems)
  * [Prerequisite Software](https://docs.tigergraph.com/tigergraph-server/3.9/installation/hw-and-sw-requirements#_prerequisite_software)
  * [Shell](https://docs.tigergraph.com/tigergraph-server/3.9/installation/hw-and-sw-requirements#_shell)
  * [Utilities](https://docs.tigergraph.com/tigergraph-server/3.9/installation/hw-and-sw-requirements#_utilities)
  * [NTP](https://docs.tigergraph.com/tigergraph-server/3.9/installation/hw-and-sw-requirements#_ntp)
  * [Firewall](https://docs.tigergraph.com/tigergraph-server/3.9/installation/hw-and-sw-requirements#_fw)
  * [Browser](https://docs.tigergraph.com/tigergraph-server/3.9/installation/hw-and-sw-requirements#_browser)
  * [Hardware Recommendations](https://docs.tigergraph.com/tigergraph-server/3.9/installation/hw-and-sw-requirements#_hardware_recommendations)
  * [Personal Use](https://docs.tigergraph.com/tigergraph-server/3.9/installation/hw-and-sw-requirements#_personal_use)
  * [Development, UAT, or SIT System](https://docs.tigergraph.com/tigergraph-server/3.9/installation/hw-and-sw-requirements#_development_uat_or_sit_system)
  * [Production System](https://docs.tigergraph.com/tigergraph-server/3.9/installation/hw-and-sw-requirements#_production_system)
  * [Additional Considerations](https://docs.tigergraph.com/tigergraph-server/3.9/installation/hw-and-sw-requirements#_additional_considerations)


# Hardware and Software Requirements
### Contents
  * [Hardware Requirements](https://docs.tigergraph.com/tigergraph-server/3.9/installation/hw-and-sw-requirements#_hardware_requirements)
  * [Certified Operating Systems](https://docs.tigergraph.com/tigergraph-server/3.9/installation/hw-and-sw-requirements#_certified_operating_systems)
  * [Prerequisite Software](https://docs.tigergraph.com/tigergraph-server/3.9/installation/hw-and-sw-requirements#_prerequisite_software)
  * [Shell](https://docs.tigergraph.com/tigergraph-server/3.9/installation/hw-and-sw-requirements#_shell)
  * [Utilities](https://docs.tigergraph.com/tigergraph-server/3.9/installation/hw-and-sw-requirements#_utilities)
  * [NTP](https://docs.tigergraph.com/tigergraph-server/3.9/installation/hw-and-sw-requirements#_ntp)
  * [Firewall](https://docs.tigergraph.com/tigergraph-server/3.9/installation/hw-and-sw-requirements#_fw)
  * [Browser](https://docs.tigergraph.com/tigergraph-server/3.9/installation/hw-and-sw-requirements#_browser)
  * [Hardware Recommendations](https://docs.tigergraph.com/tigergraph-server/3.9/installation/hw-and-sw-requirements#_hardware_recommendations)
  * [Personal Use](https://docs.tigergraph.com/tigergraph-server/3.9/installation/hw-and-sw-requirements#_personal_use)
  * [Development, UAT, or SIT System](https://docs.tigergraph.com/tigergraph-server/3.9/installation/hw-and-sw-requirements#_development_uat_or_sit_system)
  * [Production System](https://docs.tigergraph.com/tigergraph-server/3.9/installation/hw-and-sw-requirements#_production_system)
  * [Additional Considerations](https://docs.tigergraph.com/tigergraph-server/3.9/installation/hw-and-sw-requirements#_additional_considerations)


This page details the system requirements and recommendations for running TigerGraph in a production or development environment.
## [](https://docs.tigergraph.com/tigergraph-server/3.9/installation/hw-and-sw-requirements#_hardware_requirements)Hardware Requirements
  * **CPU** : The TigerGraph database runs on x86_64 CPUs, with a minimum of 4 cores. See the [Hardware Recommendations](https://docs.tigergraph.com/tigergraph-server/3.9/installation/hw-and-sw-requirements#_hardware_recommendations) section for additional considerations.
  * **Disk Storage** : Solid State Disk (SSD) storage is required, not just to improve performance, but also to avoid timeout and other timing issues.


## [](https://docs.tigergraph.com/tigergraph-server/3.9/installation/hw-and-sw-requirements#_certified_operating_systems)Certified Operating Systems
The TigerGraph Software Suite is designed to run on 64-bit Linux. It can run on a variety of Linux 64-bit distributions. The software has been tested on the operating systems listed below:
Table 1. List of certified OS Distro | Supported  
---|---  
RedHat (RHEL) 7.0 to 8.8 | ✓  
RedHat (RHEL) 9 | ✓ For new installations of RHEL 9 users have to contact support@tigergraph.com. The TigerGraph Support team will then provision an installer patch to ensure the installation success.  
CentOs 6.5 to 8.0 | ✓  
Amazon Linux 2016.03 to 2018.03 | ✓  
Ubuntu 16.04 LTS | ✓  
Ubuntu 18.04 LTS | ✓  
Ubuntu 20.04 LTS | ✓  
Debian 10 & 11 | ✓  
Suse 12 | ✓  
Oracle Linux 8.0 to 8.4 | ✓  
Windows (all version) | X  
MacOS (Intel and M1 chip) | X  
When a range of versions is given, it means that the software has been tested on the oldest and newest versions. We continually evaluate the operating systems on the market and work to update our set of supported operating systems as needed.
The TigerGraph installer installs its own copies of Java JDK and GCC, accessible only to the TigerGraph Linux user, to avoid interfering with any other applications on the same server.
## [](https://docs.tigergraph.com/tigergraph-server/3.9/installation/hw-and-sw-requirements#_prerequisite_software)Prerequisite Software
### [](https://docs.tigergraph.com/tigergraph-server/3.9/installation/hw-and-sw-requirements#_shell)Shell
Use a bash shell for the installation process.
### [](https://docs.tigergraph.com/tigergraph-server/3.9/installation/hw-and-sw-requirements#_utilities)Utilities
Before offline installation, the TigerGraph system needs a few basic software packages to be present:
  * `crontab`
  * `curl`
  * `ip`
  * `more`
  * `netcat`
  * `netstat`
  * `net-tools`
  * `ssh`/`sshd` (Only required for cluster installation)
  * `sshpass`
  * `tar`


If they are not present, the TigerGraph installer will exit with an error reporting which packages are missing. Contact your system administrator to have them installed on your target system. For example, they can be installed with one of the following commands.   
---  
```
# Centos or RedHat:
sudo yum install tar curl cronie iproute util-linux-ng net-tools nc coreutils openssh-clients openssh-server sshpass

# Ubuntu or Debian (Except Ver 18.04):
sudo apt install tar curl cron iproute util-linux net-tools netcat coreutils openssh-client openssh-server sshpass

# Ubuntu or Debian (Ver. 18.04):
sudo apt install tar curl cron iproute2 util-linux net-tools netcat coreutils openssh-client openssh-server sshpass
![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

### [](https://docs.tigergraph.com/tigergraph-server/3.9/installation/hw-and-sw-requirements#_ntp)NTP
If you are running TigerGraph on a multi-node cluster, you **must** install, configure and run the NTP (Network Time Protocol) daemon service. This service will synchronize system time among all cluster nodes.
### [](https://docs.tigergraph.com/tigergraph-server/3.9/installation/hw-and-sw-requirements#_fw)Firewall
If you are running TigerGraph on a multi-node cluster, you **must** configure the iptables/firewall rules to make all TCP ports open among all cluster nodes.
### [](https://docs.tigergraph.com/tigergraph-server/3.9/installation/hw-and-sw-requirements#_browser)Browser
In an on-premises installation, the system is fully functional without a web browser. To run the optional browser-based TigerGraph GraphStudio User Interface or Admin Portal, you need an appropriate browser:
Browser | Chrome | Safari | Firefox | Opera | Edge | Internet Explorer  
---|---|---|---|---|---|---  
Supported version | 54.0+ | 11.1+ | 59.0+ | 52.0+ | 80.0+ | 10+  
Other browser-based products, such as TigerGraph Insights, have their own browser requirements. See their corresponding documentation.
## [](https://docs.tigergraph.com/tigergraph-server/3.9/installation/hw-and-sw-requirements#_hardware_recommendations)Hardware Recommendations
Choosing the right hardware to host your TigerGraph system is crucial for the right balance of cost and performance. This page provides some general guidelines for hardware selection based on simple hypothetical assumptions, but your actual hardware requirements will vary based on your data size, workload, and performance requirements.
The sizing recommendations below apply to each server node. If you have more than several hundred gigabytes of data, you should consider deploying a cluster of multiple nodes, to distribute your data.
Consult a TigerGraph solution architects for an estimate of memory and storage needs.   
---  
### [](https://docs.tigergraph.com/tigergraph-server/3.9/installation/hw-and-sw-requirements#_personal_use)Personal Use
Example profile: A single user on a personal computer (desktop or laptop), who is learning to use the software and to write applications.
Component | Specification  
---|---  
CPU | 4 cores (≥ 2.10GHz)  
RAM | 8 GB  
Storage | ≥ 50 GB (SSD)  
Network | 1 Gigabit Ethernet adapter  
### [](https://docs.tigergraph.com/tigergraph-server/3.9/installation/hw-and-sw-requirements#_development_uat_or_sit_system)Development, UAT, or SIT System
Component | Specification  
---|---  
CPU | ≥ 16 cores (≥ 3.00GHz)  
RAM | ≥ 32 GB  
Storage | ≥ 300 GB (SSD)  
Network | 1 Gigabit Ethernet adapter  
### [](https://docs.tigergraph.com/tigergraph-server/3.9/installation/hw-and-sw-requirements#_production_system)Production System
Production systems should consider having replica clusters for redundancy and availability.   
---  
Component | Specification  
---|---  
CPU | ≥ 32 cores (≥ 3.40GHz)  
RAM | ≥ 64 GB  
Storage | ≥ 500 GB (SSD)  
Network | 10 Gigabit Ethernet adapter  
### [](https://docs.tigergraph.com/tigergraph-server/3.9/installation/hw-and-sw-requirements#_additional_considerations)Additional Considerations
This section describes considerations beyond sizing for the CPU, memory, and storage.
#### [](https://docs.tigergraph.com/tigergraph-server/3.9/installation/hw-and-sw-requirements#_cpu)CPU
Choosing the right CPU model is important. For example, **Intel Core i5** may be good enough for development or certain test systems where latency and throughput are not critical. For production systems, we suggest higher grade CPUs such as **Intel Core i7** , **Intel Xeon Gold** , and **AMD Epyc**.
CPU clock speeds are not directly comparable across different processor designs, but within the same processor family, faster is better. We highly recommend using a **speed of 3.00GHz or higher**.
Below is an example of a production hardware configuation.
```
Architecture:    x86_64
CPU op-mode(s):   32-bit, 64-bit
Byte Order:     Little Endian
CPU(s):       24
On-line CPU(s) list: 0-23
Thread(s) per core: 1
Core(s) per socket: 1
Socket(s):      24
NUMA node(s):    1
Vendor ID:      GenuineIntel
CPU family:     6
Model:        85
Model name:     Intel(R) Xeon(R) Gold 6248R CPU @ 3.00GHz
Stepping:      7
CPU MHz:       2992.969
![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

#### [](https://docs.tigergraph.com/tigergraph-server/3.9/installation/hw-and-sw-requirements#_ram_memory)RAM (Memory)
RAM is needed both to _store_ a working copy of our data and to do _computational_ work. TigerGraph is a hybrid in-memory database, meaning that in order to achieve maximum performance, it will attempt to load a copy of your entire working graph into RAM. The RAM size is based on multiple factors:
  * Type of workload (e.g., OLAP/OLTP queries, intensive CRUD operation…​.)
  * Query SLAs
  * Dataset partitioning (number of partitions in your TigerGraph cluster)


RAM is not only size but also type. DDR4 or faster is recommended because it gives you significantly faster data transfer rates, better power efficiency, and better data granularity than DDR3.
#### [](https://docs.tigergraph.com/tigergraph-server/3.9/installation/hw-and-sw-requirements#_disk)Disk
As stated in the [Hardware Requirements](https://docs.tigergraph.com/tigergraph-server/3.9/installation/hw-and-sw-requirements#_hardware_requirements) section, solid state drive (SSD) storage is **mandatory** for TigerGraph. The longer data access times of spinning hard disks (HDD) can cause several issues, such as the following:
  * Timeouts between internal components of TigerGraph
  * Issues when making a backup of a TigerGraph data
  * Issues when restoring a TigerGraph database
  * Low performance


We recommend using different mount points for the App, Data, Log and Temp directories to avoid one single point of failure. This can be defined while installing TigerGraph (either via interactive mode or non-interactive mode). Here is an example of how to specify different mount points in the `install_config.json` file.
```
"RootDir": {
"AppRoot": "/mnt1/app",
"DataRoot": "/mnt2/data",
"LogRoot": "/mnt3/log"
"TempRoot": "/mnt4/tmp"
},
![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

To economize, you can opt to use a magnetic hard disk (HDD) for the logs; the remaining ones must be SSD.   
---  
Another important point when choosing the Disk type is the disk IOPS capacity. We **strongly** suggest opting for ≥3000 IOPS.
3 Twin Dolphin Drive, Ste 225 Redwood City, CA 94065 
Copyright © 2025 TigerGraph
  * ## Resources
    * [Support](https://www.tigergraph.com/support/)
    * [Community](https://community.tigergraph.com/)
    * [Developer Site](https://dev.tigergraph.com/)
    * [Test Drive](https://testdrive.tigergraph.com/)
  * ## Social
    * [Linkedin](https://www.linkedin.com/company/tigergraph/)
    * [Facebook](https://www.facebook.com/TigerGraphDB/)
    * [Twitter](https://twitter.com/tigergraphdb)
  * ## Legal
    * [Privacy Policy](https://www.tigergraph.com/privacy-policy/)
    * [Terms of Use](https://www.tigergraph.com/terms/)
    * [Sitemap](https://docs.tigergraph.com/sitemap.xml)


